added quick-pivot src

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 </head>
 <body>
 
+<div id="quickData0"></div>
+<div id="quickPivot0"></div>
+<hr>
 <div id="quickData"></div>
 <div id="quickPivot"></div>
 <hr>
 <div id="quickPivot2"></div>
 
-<script src="/node_modules/quick-pivot/lib/quick-pivot.js"></script>
+<script src="/quick-pivot/lib/quick-pivot.js"></script>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/src/main.js"></script>
 
